# 30Gueselrobert_Electronics

./: .gitignore  README.md
firmware/: CMakeLists.txt  README.md  communication.md  doing_the_math.md  main.cpp
firmware/inc/: definitions.h  digitalin.h  digitalout.h  robocom.h  scara.h  scara_constants.h  scara_types.h  serial.h  utility.h
firmware/src/: digitalin.cpp  digitalout.cpp  robocom.cpp  scara.cpp  serial.cpp  utility.cpp
